force-app/main/default/objects/EmployeeUnionInfo__c/EmployeeUnionInfo__c.object-meta.xml
<CustomObject>
    <label>EmployeeUnionInfo</label>
    <nameField>
        <label>EmployeeUnionInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EmployeeUnionInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>