force-app/main/default/objects/EmployeeUnionInfo__c/fields/BeginDate__c.field-meta.xml
<CustomField>
    <fullName>BeginDate__c</fullName>
    <description>Begin Date(This field was created for NPL MA).</description>
    <label>BeginDate</label>
    <type>Date</type>
</CustomField>