force-app/main/default/objects/EmployeeUnionInfo__c/fields/Craft__c.field-meta.xml
<CustomField>
    <fullName>Craft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Craft code(This field was created for NPL MA).</description>
    <label>Craft</label>
    <referenceTo>Craft__c</referenceTo>
    <relationshipLabel>EmployeeUnionInfos</relationshipLabel>
    <relationshipName>EmployeeUnionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>