force-app/main/default/objects/EmployeeUnionInfo__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>End Date(This field was created for NPL MA).</description>
    <label>EndDate</label>
    <type>Date</type>
</CustomField>