force-app/main/default/objects/EmployeeUnionInfo__c/fields/ExternalRefID__c.field-meta.xml
<CustomField>
    <fullName>ExternalRefID__c</fullName>
    <description>External ID used by Integration(This field was created for NPL MA).</description>
    <externalId>true</externalId>
    <label>ExternalRefID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>