force-app/main/default/objects/EmployeeUnionInfo__c/fields/PersonnelNumber__c.field-meta.xml
<CustomField>
    <fullName>PersonnelNumber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Employee Personnel Number(This field was created for NPL MA).</description>
    <label>PersonnelNumber</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>EmployeeUnionInfos</relationshipLabel>
    <relationshipName>EmployeeUnionInfos</relationshipName>
    <type>Lookup</type>
</CustomField>