force-app/main/default/objects/EmployeeUnionInfo__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Union__c</columns>
    <columns>Class__c</columns>
    <columns>Craft__c</columns>
    <columns>PersonnelNumber__c</columns>
    <columns>Rate__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>